--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.0
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.1
+  google_fonts: ^4.0.0
+  hydrated_bloc: ^9.0.0
+  json_annotation: ^4.4.0
+  weather_repository:
+    path: packages/weather_repository
 
 
   # The following adds the Cupertino Icons font to your application.
