--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   google_fonts: ^4.0.0
   hydrated_bloc: ^9.0.0
-  json_annotation: ^4.4.0
+  json_annotation: ^4.8.1
   weather_repository:
     path: packages/weather_repository
 
@@ -47,6 +47,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.0.0
+  json_serializable: ^6.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
