--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   weather_repository:
     path: packages/weather_repository
   path_provider: ^2.0.8
+  flutter_svg: any
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -70,7 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
