--- a/packages/notification_service/pubspec.yaml
+++ b/packages/notification_service/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   json_annotation: ^4.8.1
   http: ^0.13.6
   flutter_local_notifications: ^14.1.1
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
